policies/allow-privilege-escalation-ephemeralcontainers.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: check-allow-privilege-escalation-ephemeralcontainers
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods/ephemeralcontainers"]
  validations:
    - expression: >
        (has(object.spec.os) &&
         has(object.spec.os.name) &&
         object.spec.os.name.lowerAscii() == "windows") ||
        !has(object.spec.ephemeralContainers) ||
        object.spec.ephemeralContainers.all(ec,
          has(ec.securityContext) &&
          has(ec.securityContext.allowPrivilegeEscalation) &&
          ec.securityContext.allowPrivilegeEscalation == false
        )
      message: >
        spec.ephemeralContainers[*].securityContext.allowPrivilegeEscalation must be set to false.
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-allow-privilege-escalation-ephemeralcontainers-namespace-optout-warn
spec:
  policyName: check-allow-privilege-escalation-ephemeralcontainers
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["restricted"]
        - key: validating-admission-policies.kolteq.com/allow-privilege-escalation-ephemeralcontainers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-allow-privilege-escalation-ephemeralcontainers-namespace-optin-warn
spec:
  policyName: check-allow-privilege-escalation-ephemeralcontainers
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: allow-privilege-escalation-ephemeralcontainers.validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-allow-privilege-escalation-ephemeralcontainers-namespace-optout-audit
spec:
  policyName: check-allow-privilege-escalation-ephemeralcontainers
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["restricted"]
        - key: validating-admission-policies.kolteq.com/allow-privilege-escalation-ephemeralcontainers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-allow-privilege-escalation-ephemeralcontainers-namespace-optin-audit
spec:
  policyName: check-allow-privilege-escalation-ephemeralcontainers
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: allow-privilege-escalation-ephemeralcontainers.validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-allow-privilege-escalation-ephemeralcontainers-namespace-optout-deny
spec:
  policyName: check-allow-privilege-escalation-ephemeralcontainers
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["restricted"]
        - key: validating-admission-policies.kolteq.com/allow-privilege-escalation-ephemeralcontainers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-allow-privilege-escalation-ephemeralcontainers-namespace-optin-deny
spec:
  policyName: check-allow-privilege-escalation-ephemeralcontainers
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: allow-privilege-escalation-ephemeralcontainers.validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["true"]
